--- a/_pgbackup/casa2/index_1697644889.html
+++ b/_pgbackup/casa2/index_1697644889.html
@@ -13,6 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <!-- Colors -->         
         <link rel="stylesheet" type="text/css" href="assets/css/colors/color1.css" id="colors"> 
@@ -23,9 +24,10 @@
         <script src="javascript/html5shiv.js"></script>
         <script src="javascript/respond.min.js"></script>
     <![endif]-->         
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900,100italic,200italic,300italic,400italic,500italic,700italic,600italic,800italic,900italic&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:700italic,800italic,600italic,500italic,400italic,300italic,800,700,600,500,400,300&display=swap">
     </head>     
-    <body class="header-fixed page no-sidebar header-style-2 topbar-style-2 menu-has-search"> 
+    <body class="header-fixed page no-sidebar header-style-2 topbar-style-2"> 
         <div id="wrapper" class="animsition"> 
             <div id="page" class="clearfix"> 
                 <!-- Header Wrap -->                 
@@ -38,7 +40,8 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Idiomas:</span><span class="icons"><a class="current-menu-item" href="index.html">SPA</a> <a href="Ingles.html">ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Idiomas:</span>
+                                        <span class="icons"><a class="current-menu-item" href="index.html">SPA</a> <a href="Ingles.html">ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -51,7 +54,7 @@
                         <div id="site-header-inner" class="container"> 
                             <div class="wrap-inner clearfix"> 
                                 <div id="site-logo" class="clearfix"> 
-                                    <div id="site-log-inner"> <a href="index.html" rel="home" class="main-logo"> <img src="assets/img/logo_casa_armando.svg" alt="Autora" width="186" height="39" data-retina="assets/img/logo-small@2x.png" data-width="186" data-height="39"> </a> 
+                                    <div id="site-log-inner"> <a href="index.html" rel="home" class="main-logo"> <img src="assets/img/logo_casa_armando.svg" alt="Casa Armando Logo" width="50%" data-retina="assets/img/logo_casa_armando.svg"> </a> 
                                     </div>                                     
                                 </div>
                                 <!-- /#site-logo -->                                 
@@ -85,9 +88,9 @@
                 <!-- Main Content -->                 
                 <div id="main-content" class="site-main clearfix"> 
                     <div class="newclass">
-                        <p class="translatable "> Establecido en el estado de Oaxaca, México. Mezcales Casa Armando es un productor de mezcal líder en innovación y responsabilidad social. </p>
+                        <p class="texts translatable"> Establecido en el estado de Oaxaca, México. Mezcales Casa Armando es un productor de mezcal líder en innovación y responsabilidad social. </p>
                         <img src="assets/img/firma.png" class="block imgs" style="margin-top: 1vh;"></img> 
-                        <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
+                        <img src="assets/img/simbolo.png" class="block2" style="margin-top: 43px;"></img> 
                     </div>
                     <div class="rev_slider_wrapper fullwidthbanner-container"> 
                         <div id="rev-slider1" class="rev_slider fullwidthabanner"> 
@@ -113,6 +116,27 @@
                                     <!-- Layers -->                                     
                                 </li>                                 
                                 <!-- /End Slide 3 -->                                 
+                                <!-- Slide 4 -->                                 
+                                <li data-transition="random"> 
+                                    <!-- Main Image -->                                     
+                                    <img src="assets/img/slider_home_cuatro.jpg" alt="" data-bgposition="center center" data-no-retina> 
+                                    <!-- Layers -->                                     
+                                </li>                                 
+                                <!-- /End Slide 4 -->
+                                <!-- Slide 5 -->                                 
+                                <li data-transition="random"> 
+                                    <!-- Main Image -->                                     
+                                    <img src="assets/img/slider_home_cinco.jpg" alt="" data-bgposition="center center" data-no-retina> 
+                                    <!-- Layers -->                                     
+                                </li>                                 
+                                <!-- /End Slide 5 -->
+                                <!-- Slide 6 -->                                 
+                                <li data-transition="random"> 
+                                    <!-- Main Image -->                                     
+                                    <img src="assets/img/slider_home_seis.jpg" alt="" data-bgposition="center center" data-no-retina> 
+                                    <!-- Layers -->                                     
+                                </li>                                 
+                                <!-- /End Slide 6 -->                                 
                             </ul>                             
                         </div>                         
                     </div>
@@ -127,10 +151,11 @@
                         <div class="bottom-bar-inner-wrap"> 
                             <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-content"> 
-                                <div id="copyright"><span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
+                                <div id="copyright">
+                                    <span class="translatable" class="text"><a href="#" class="translatable text-accent">©2023&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
                                 </div>                                 
                             </div>
-                            <div class="bottom-bar-menu"> 
+                            <div class="bottom-bar-content bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
                                     <li class="menu-item current-menu-item"> <a class="translatable" href="index.html">INICIO</a> 
                                     </li>                                     
