--- a/casa2/index.html
+++ b/casa2/index.html
@@ -116,6 +116,27 @@
                                     <!-- Layers -->                                     
                                 </li>                                 
                                 <!-- /End Slide 3 -->                                 
+                                <!-- Slide 4 -->                                 
+                                <li data-transition="random"> 
+                                    <!-- Main Image -->                                     
+                                    <img src="assets/img/slider_home_cuatro2.jpg" alt="" data-bgposition="center center" data-no-retina> 
+                                    <!-- Layers -->                                     
+                                </li>                                 
+                                <!-- /End Slide 4 -->
+                                <!-- Slide 5 -->                                 
+                                <li data-transition="random"> 
+                                    <!-- Main Image -->                                     
+                                    <img src="assets/img/slider_home_cinco.jpg" alt="" data-bgposition="center center" data-no-retina> 
+                                    <!-- Layers -->                                     
+                                </li>                                 
+                                <!-- /End Slide 5 -->
+                                <!-- Slide 6 -->                                 
+                                <li data-transition="random"> 
+                                    <!-- Main Image -->                                     
+                                    <img src="assets/img/slider_home_seis.jpg" alt="" data-bgposition="center center" data-no-retina> 
+                                    <!-- Layers -->                                     
+                                </li>                                 
+                                <!-- /End Slide 6 -->                                 
                             </ul>                             
                         </div>                         
                     </div>
